@@ -1,3 +1,7 @@
+##### Tue 19/06/2012
+* Seems all internals of range related calsses are finished. So change other classes who use range expressions.
+* Implement inherit methods in netlist::Range, netlist::RangeArray and netlist::RangeArrayCommon.
+
 ##### Mon 18/06/2012
 * The major construction of range operations have been finished.
 * op_deduct() in netlist::Range is rewritten along with op_normalise_tree().
